--- a/index.html
+++ b/index.html
@@ -1,30 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Akuma Retaliation Clan Bot</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
         body { 
-            font-family: 'Arial', sans-serif; 
-            max-width: 800px; 
+            font-family: 'Inter', sans-serif; 
+            max-width: 900px; 
             margin: 0 auto; 
-            padding: 20px;
-            line-height: 1.6;
+            padding: 40px 20px;
+            line-height: 1.7;
             background-color: #1a1a2e;
-            color: #e6e6e6;
-            text-align: center;
+            color: #f0f0f0;
         }
         h1 {
             color: #ff4655;
+            text-align: center;
+            margin-bottom: 20px;
+            font-size: 2.2em;
         }
         h2 {
             color: #4cc9f0;
+            margin-top: 30px;
         }
         .container {
             background-color: #16213e;
-            padding: 30px;
-            border-radius: 8px;
+            padding: 40px;
+            border-radius: 12px;
             border: 1px solid #0f3460;
-            margin-top: 40px;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.4);
         }
         a {
             display: inline-block;
@@ -34,20 +40,25 @@
             border-radius: 6px;
             color: #e6e6e6;
             text-decoration: none;
+            font-weight: 600;
+            transition: 0.2s ease;
         }
         a:hover {
             background-color: #4cc9f0;
             color: #1a1a2e;
+        }
+        p {
+            margin-bottom: 16px;
         }
     </style>
 </head>
 <body>
     <div class="container">
         <h1>Akuma Retaliation Clan Bot</h1>
-        <p>The official Discord bot for the Akuma Retaliation clan discord server mainly for a roblox game <strong>Legends Battlegrounds</strong>.</p>
+        <p>The official Discord bot for the <strong>Akuma Retaliation</strong> clan in <em>Legends Battlegrounds</em>.</p>
         
         <h2>About the Bot</h2>
-        <p>Our bot helps organize the clan , assigning roles automatically, and keeping the server secure. It’s simple, safe, and built to make life easier.</p>
+        <p>Our bot keeps the clan organized by linking Roblox and Discord accounts, assigning roles automatically, and improving server security. It’s simple, safe, and built for the community.</p>
         
         <h2>Important Links</h2>
         <p>
